# ere-be-dragons

./: README.md
codebases/javascript/: .continuous-security.yml  README.md  app.js  config.json  package-lock.json  package.json  report.md
codebases/python/: README.md  config.json  main.py
codebases/python-poetry/: .continuous-security.yml  README.md  config.json  pyproject.toml  report.md  requirements.txt
codebases/ruby/: .continuous-security.yml  Gemfile  README.md  app.rb  config.json  report.md
javascript/: README.md
javascript/dependencies/: README.md  package-lock.json  package.json
javascript/express/: README.md  app.js  package-lock.json  package.json
